# RavenLinux

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  install-compositor.sh  raven-2025.12-x86_64.iso.md5  raven-2025.12-x86_64.iso.sha256
bootloader/: Cargo.toml
bootloader/src/: config.rs  linux.rs  main.rs  menu.rs
bootloader/test-esp/EFI/BOOT/: BOOTX64.EFI
desktop/compositor/: Cargo.toml
desktop/compositor/src/: main.rs  native.rs  state.rs
desktop/compositor/src/config/: mod.rs
desktop/compositor/src/input/: keyboard.rs  mod.rs  pointer.rs
desktop/compositor/src/render/: mod.rs
desktop/compositor/src/shell/: mod.rs
desktop/compositor/src/window/: mod.rs
desktop/compositor/src/workspace/: mod.rs
desktop/compositor/target-user/: .future-incompat-report.json  .rustc_info.json
desktop/compositor/target-user/release/: raven-compositor  raven-compositor.d
desktop/compositor/target-user/release/.fingerprint/ab_glyph_rasterizer-e6b2f1f54615303d/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
desktop/compositor/target-user/release/.fingerprint/andrew-e9349167c583b6b4/: lib-andrew.json
desktop/compositor/target-user/release/.fingerprint/anyhow-390af2dd76bdd0be/: lib-anyhow  lib-anyhow.json
desktop/compositor/target-user/release/.fingerprint/anyhow-87e99d9035bfa530/: run-build-script-build-script-build  run-build-script-build-script-build.json
desktop/compositor/target-user/release/.fingerprint/anyhow-9e31f9a35c7e86d0/: build-script-build-script-build  build-script-build-script-build.json
desktop/compositor/target-user/release/.fingerprint/appendlist-29be1e07a61647c9/: lib-appendlist  lib-appendlist.json
desktop/compositor/target-user/release/.fingerprint/approx-4b62c9ebaef60991/: lib-approx  lib-approx.json
desktop/compositor/target-user/release/.fingerprint/autocfg-a74453d70e4a4c3a/: lib-autocfg  lib-autocfg.json
desktop/compositor/target-user/release/.fingerprint/bitflags-66f72eb6a57391d2/: lib-bitflags  lib-bitflags.json
desktop/compositor/target-user/release/.fingerprint/bitflags-8a12489f1ada2b84/: lib-bitflags  lib-bitflags.json
desktop/compositor/target-user/release/.fingerprint/bytemuck-9da0b09b2228aa9f/: lib-bytemuck.json
desktop/compositor/target-user/release/.fingerprint/bytemuck_derive-596388b368412116/: lib-bytemuck_derive.json
desktop/compositor/target-user/release/.fingerprint/bytes-48f2c5852951c7f3/: lib-bytes.json
desktop/compositor/target-user/release/.fingerprint/calloop-61a8cd8d6268d42a/: lib-calloop  lib-calloop.json
desktop/compositor/target-user/release/.fingerprint/calloop-979e09f152cc69c3/: lib-calloop.json
desktop/compositor/target-user/release/.fingerprint/calloop-c330429453d9ff0f/: lib-calloop.json
desktop/compositor/target-user/release/.fingerprint/cc-380091c74f9326bb/: lib-cc  lib-cc.json
desktop/compositor/target-user/release/.fingerprint/cfg-expr-3e39c22c31e21c5f/: lib-cfg_expr  lib-cfg_expr.json
desktop/compositor/target-user/release/.fingerprint/cfg-if-9c5a35bb3b497787/: lib-cfg_if  lib-cfg_if.json
desktop/compositor/target-user/release/.fingerprint/cfg-if-c3c4cc7d0de47696/: lib-cfg_if  lib-cfg_if.json
desktop/compositor/target-user/release/.fingerprint/cgmath-3bf6cc0bb4c95d08/: dep-lib-cgmath  lib-cgmath  lib-cgmath.json
desktop/compositor/target-user/release/.fingerprint/cgmath-8dd26687184ca926/: run-build-script-build-script-build  run-build-script-build-script-build.json
desktop/compositor/target-user/release/.fingerprint/cgmath-e1108d9b28dd23ed/: build-script-build-script-build  build-script-build-script-build.json
desktop/compositor/target-user/release/.fingerprint/crossbeam-4ee370144ae25c71/: lib-crossbeam  lib-crossbeam.json
desktop/compositor/target-user/release/.fingerprint/crossbeam-channel-a361f4182d1c627c/: lib-crossbeam_channel  lib-crossbeam_channel.json
desktop/compositor/target-user/release/.fingerprint/crossbeam-deque-be129eb220aa27dc/: lib-crossbeam_deque  lib-crossbeam_deque.json
desktop/compositor/target-user/release/.fingerprint/crossbeam-epoch-ffc83032071fb16e/: lib-crossbeam_epoch  lib-crossbeam_epoch.json
desktop/raven-shell/: Cargo.toml  go.mod  main.go
desktop/raven-shell/cmd/raven-ctl/: go.mod  main.go
desktop/raven-shell/crates/raven-components/: Cargo.toml
desktop/raven-shell/crates/raven-components/src/: lib.rs
desktop/raven-shell/crates/raven-core/: Cargo.toml
desktop/raven-shell/crates/raven-core/src/: lib.rs
desktop/raven-shell/crates/raven-shell/: Cargo.toml
desktop/raven-shell/crates/raven-shell/src/: daemon.rs  ipc.rs  main.rs
desktop/raven-shell/crates/raven-tools/: Cargo.toml
desktop/raven-shell/crates/raven-tools/src/: lib.rs
desktop/raven-shell/docs/: architecture.md  dock.md  raven-ctl.md
desktop/raven-taskmanager/: Cargo.toml
desktop/raven-taskmanager/docs/: dock.md  raven-ctl.md
desktop/raven-taskmanager/src/: config.rs  css.rs  main.rs  messages.rs
desktop/raven-taskmanager/src/services/: config_watcher.rs  hyprland.rs  mod.rs  process.rs
desktop/raven-taskmanager/src/state/: dock.rs
desktop/raven-taskmanager/src/ui/: clock.rs  dock.rs  mod.rs  panel.rs
desktop/raven-taskmanager/src/ui/menus/: mod.rs  power.rs  settings.rs
init/: Cargo.toml
init/config/: init.toml
init/src/: config.rs  main.rs  rc.rs  service.rs
installer/: Cargo.toml
installer/src/: config.rs  disk.rs  install.rs  main.rs
tools/rvn/: Cargo.toml  test_aur.sh
tools/rvn/examples/: test_aur.rs
tools/rvn/src/: lib.rs  main.rs
tools/rvn/src/aur/: client.rs  mod.rs  pkgbuild.rs
tools/rvn/src/commands/: build.rs  clean.rs  dev.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  repo.rs  search.rs  sync.rs  system.rs  upgrade.rs  workspace.rs
tools/rvn/src/config/: mod.rs
tools/rvn/src/database/: mod.rs
tools/rvn/src/fallback/: alpine.rs  mod.rs  static_bin.rs
tools/rvn/src/package/: archive.rs  definition.rs  manifest.rs  mod.rs
tools/rvn/src/repository/: client.rs  mod.rs
tools/rvn/src/resolver/: mod.rs
tools/rvn/src/workspace/: mod.rs
(+862 files in other folders)
