[package]
name = "raven-init"
version = "0.1.0"
edition = "2021"
authors = ["RavenLinux Team"]
description = "RavenLinux Init System - PID 1 process manager"
license = "MIT"

[dependencies]
# Unix/Linux system calls
nix = { version = "0.28", features = ["signal", "process", "mount", "fs", "hostname", "reboot"] }

# Direct libc access for sync()
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime for service management (optional, can use sync for simplicity)
# Using synchronous approach for init to minimize dependencies

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true

[[bin]]
name = "raven-init"
path = "src/main.rs"

[[bin]]
name = "raven-rc"
path = "src/rc.rs"
