[package]
name = "raven-installer"
version = "0.1.0"
edition = "2021"
authors = ["RavenLinux Team"]
description = "RavenLinux System Installer"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.25"
crossterm = "0.27"

# Async
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System interaction
nix = { version = "0.27", features = ["fs", "mount", "user"] }
users = "0.11"

# Disk management
gpt = "3.1"
mbr = "0.2"

# File system
tempfile = "3.9"
walkdir = "2.4"
fs_extra = "1.3"

# Progress
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Colored output
colored = "2.1"

# Password hashing
argon2 = "0.5"

# Misc
rand = "0.8"
chrono = "0.4"

[profile.release]
lto = true
strip = true
