[package]
name = "raven-compositor"
version = "0.1.0"
edition = "2021"
authors = ["RavenLinux Team"]
description = "RavenDE Wayland Compositor"
license = "MIT"

[dependencies]
# Smithay - Wayland compositor library (Rust alternative to wlroots)
smithay = { version = "0.3", default-features = false, features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "renderer_gl",
    "wayland_frontend",
] }

# libseat for session management (use 0.1 for vendored compatibility)
libseat = "0.1"

# System interfaces
libc = "0.2"
udev = "0.6"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bitflags = "2.4"
indexmap = "2.1"
smallvec = "1.11"

# XDG
xdg = "2.5"

[features]
default = ["xwayland"]
xwayland = []

[profile.release]
lto = true
codegen-units = 1
