[package]
name = "rvn"
version = "0.1.0"
edition = "2021"
authors = ["RavenLinux Team"]
description = "The Raven Linux Package Manager - Fast, declarative, developer-focused"
license = "MIT"
repository = "https://github.com/ravenlinux/rvn"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# HTTP client for downloads
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false }

# Compression/Archive
flate2 = "1.0"
tar = "0.4"
zstd = "0.13"

# Hashing
sha2 = "0.10"
blake3 = "1.5"

# File system
walkdir = "2.4"
tempfile = "3.9"
fs_extra = "1.3"

# Progress bars
indicatif = { version = "0.17", features = ["tokio"] }

# Colored output
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database for package tracking
rusqlite = { version = "0.30", features = ["bundled"] }

# Version parsing
semver = { version = "1.0", features = ["serde"] }

# Terminal UI
dialoguer = "0.11"
console = "0.15"

# Parallel execution
rayon = "1.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System info
num_cpus = "1.16"

# Home directory
dirs = "5.0"

# Async recursion helper
async-recursion = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
